--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,7 +1,12 @@
 <% if !user_signed_in?%>
   <% controller.redirect_to "/" %>
 <% end %>
-
+<section id="edit_post_page">
+<div class="edit_post_form">
 <h1>Edit Post</h1>
 
 <%= render 'form' %>
+</div>
+
+
+</section>
