--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,39 +1,24 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
- @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;0,500;1,200;1,400&display=swap");
- * {
-	 margin: 0;
-	 padding: 0;
-	 font-family: "Montserrat", sans-serif;
-	 --dark-green: #588157;
-	 --light-green: #84a98c;
-	 --other-green: #e1eae3;
-	 --gray: #808080;
- }
- body {
-	 height: 100vh;
-	 overflow: hidden;
- }
- nav {
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;0,500;1,200;1,400&display=swap');
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Montserrat', sans-serif;
+  --dark-green: #588157;
+  --light-green: #84a98c;
+  --other-green: #e1eae3;
+  --gray: #808080;
+}
+body {
+  height: 100vh;
+  overflow: hidden;
+}
+nav {
   height: 80px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   align-items: center;
   justify-items: center;
-  position: stickalign-self: end;
+  position: sticky;
   margin-left: auto;
   margin-right: auto;
 }
@@ -59,101 +44,101 @@
   padding-left: 10px;
   font-size: 17px;
 }
-.links{
-	display: grid;
+.links {
+  display: grid;
 }
 .container {
-	height: 100vh;
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	place-items: center;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  place-items: center;
 }
 .title_and_tag {
-	padding-left: 30px;
+  padding-left: 30px;
 }
 #tag_line {
-	margin-top: 30px;
-	font-weight: 400;
-	color: var(--light-green);
+  margin-top: 30px;
+  font-weight: 400;
+  color: var(--light-green);
 }
 .sr-only {
-	border: 0;
-	clip: rect(0 0 0 0);
-	height: 1px;
-	margin: -1px;
-	overflow: hidden;
-	padding: 0;
-	position: absolute;
-	width: 1px;
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
 }
 .input_card {
-	margin: auto;
-	box-sizing: border-box;
-	display: grid;
-	grid-row-gap: 10px;
-	justify-items: center;
-	align-items: center;
-	padding: 10px;
+  margin: auto;
+  box-sizing: border-box;
+  display: grid;
+  grid-row-gap: 10px;
+  justify-items: center;
+  align-items: center;
+  padding: 10px;
 }
 .login_card {
-	border: 3px solid #588157;
+  border: 3px solid #588157;
 }
 .text_input {
-	border: 1px solid var(--dark-green);
-	box-sizing: border-box;
-	height: 30px;
-	margin: 5px;
-	padding: 2px;
-	border-radius: 2px;
-	transition: box-shadow 200ms;
+  border: 1px solid var(--dark-green);
+  box-sizing: border-box;
+  height: 30px;
+  margin: 5px;
+  padding: 2px;
+  border-radius: 2px;
+  transition: box-shadow 200ms;
 }
 .text_input:hover {
-	cursor: pointer;
-	box-shadow: 2px 2px 4px var(--dark-green);
+  cursor: pointer;
+  box-shadow: 2px 2px 4px var(--dark-green);
 }
 .btn {
-	border: 1px solid #000000;
-	box-sizing: border-box;
-	border-radius: 5px;
-	width: 100px;
-	height: 30px;
-	transition: box-shadow 200ms;
+  border: 1px solid #000000;
+  box-sizing: border-box;
+  border-radius: 5px;
+  width: 100px;
+  height: 30px;
+  transition: box-shadow 200ms;
 }
 .btn:hover {
-	cursor: pointer;
-	box-shadow: 2px 2px 4px var(--dark-green);
+  cursor: pointer;
+  box-shadow: 2px 2px 4px var(--dark-green);
 }
 .dark_btn {
-	background: var(--dark-green);
+  background: var(--dark-green);
 }
 .divider {
-	width: 170px;
-	color: #000000;
+  width: 170px;
+  color: #000000;
 }
 .light_btn {
-	background: var(--light-green);
-	margin: 10px;
+  background: var(--light-green);
+  margin: 10px;
 }
 #sign_up {
-	position: absolute;
-	display: none;
-	margin: auto;
-	background-color: white;
-	border: 2px solid var(--dark-green);
-	box-shadow: 20px 20px 20px rgba(88, 129, 87, 0.5);
-	padding: 30px;
-	border-radius: 20px;
+  position: absolute;
+  display: none;
+  margin: auto;
+  background-color: white;
+  border: 2px solid var(--dark-green);
+  box-shadow: 20px 20px 20px rgba(88, 129, 87, 0.5);
+  padding: 30px;
+  border-radius: 20px;
 }
 .inline {
-	display: inline-block;
+  display: inline-block;
 }
 .close_btn {
-	margin-left: 30%;
-	width: 50px;
+  margin-left: 30%;
+  width: 50px;
 }
 #page_container {
-	display: grid;
-	grid-template-columns: 1fr 2fr 1fr;
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
 }
 #user_info_box {
   margin-top: 20px;
@@ -163,121 +148,119 @@
   border-radius: 5px;
   grid-column: 1 / 2;
   grid-row: 1 / 3;
-	height: 250px;
-	padding: 10px;
-	background-color: var(--other-green);
+  height: 250px;
+  padding: 10px;
+  background-color: var(--other-green);
 }
-#middle_column{
-	background: linear-gradient(180.67deg, #B1C8B6 4.62%, #588157 96.55%);
-	grid-column: 2/3;
-	padding:20px;
-	padding-bottom: 0;
+#middle_column {
+  background: linear-gradient(180.67deg, #b1c8b6 4.62%, #588157 96.55%);
+  grid-column: 2/3;
+  padding: 20px;
+  padding-bottom: 0;
 }
 
 #message {
-	grid-template: 2fr 3fr;
+  grid-template: 2fr 3fr;
 }
 #profile-info {
-	font-size: small;
+  font-size: small;
 }
 .blank_btn {
-	border: none;
-	background-color: transparent;
-	text-align: center;
+  border: none;
+  background-color: transparent;
+  text-align: center;
 }
 #new_post_container {
-	padding: 5px;
-	border: 2px solid var(--gray);
-	border-radius: 5px;
-	background-color: var(--dark-green);
-	display: flex;
+  padding: 5px;
+  border: 2px solid var(--gray);
+  border-radius: 5px;
+  background-color: var(--dark-green);
+  display: flex;
 }
 #new_post {
-	border: 2px solid var(--gray);
-	background-color: var(--other-green);
-	border-radius: 5px;
-	grid-column: 2/3;
-	padding: 5px;
-	display: grid; 
-	min-height:90%;
-	width:100%;
+  border: 2px solid var(--gray);
+  background-color: var(--other-green);
+  border-radius: 5px;
+  grid-column: 2/3;
+  padding: 5px;
+  display: grid;
+  min-height: 90%;
+  width: 100%;
 }
 #new_post_button {
-	background: var(--dark-green);
-	justify-self: end;
-	align-self: end;
-	padding: inherit;
-	border-radius: 5px;
-	font-size: large;
+  background: var(--dark-green);
+  justify-self: end;
+  align-self: end;
+  padding: inherit;
+  border-radius: 5px;
+  font-size: large;
 }
-textarea{
-
-	width: 100%;
-	background-color: transparent;
-	border: none; 
-	resize: none;
-	min-height: 80%;
-	align-self: center;
-	font-size: large;
+textarea {
+  width: 100%;
+  background-color: transparent;
+  border: none;
+  resize: none;
+  min-height: 80%;
+  align-self: center;
+  font-size: large;
 }
-textarea:focus{
-	outline:none;
+textarea:focus {
+  outline: none;
 }
-.post_image_size{
-	width:100px;
-	height:100px;
-	border: 1px solid var(--gray)
+.post_image_size {
+  width: 100px;
+  height: 100px;
+  border: 1px solid var(--gray);
 }
-.post_attachment_size{
-	width:200px;
-	height:200px;
-	border: 1px solid var(--gray);
+.post_attachment_size {
+  width: 200px;
+  height: 200px;
+  border: 1px solid var(--gray);
 }
 #post_container {
-	border: 2px solid var(--gray);
-	background-color: var(--other-green);
-	border-radius: 5px;
-	margin-top: 20px;
-	display: grid;
-	grid-template: 1fr 4fr / 1fr 4fr;
-	height:250px;
-	padding:2%;
-	justify-items: center;
+  border: 2px solid var(--gray);
+  background-color: var(--other-green);
+  border-radius: 5px;
+  margin-top: 20px;
+  display: grid;
+  grid-template: 1fr 4fr / 1fr 4fr;
+  height: 250px;
+  padding: 2%;
+  justify-items: center;
 }
-#posts_scroller{
-	overflow:	auto;    
-	margin-left: 15px;
-	margin-right: -2000px;
-	padding-right: 2000px;
-	height: 717px;
-	margin-top:25px;
+#posts_scroller {
+  overflow: auto;
+  margin-left: 15px;
+  margin-right: -2000px;
+  padding-right: 2000px;
+  height: 717px;
+  margin-top: 25px;
 }
-#edit_post_page{
-	display:grid;
-	grid-template-columns: 1fr 2fr 1fr;
+#edit_post_page {
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
 }
-.edit_post_form{
-	grid-column: 2/3;
+.edit_post_form {
+  grid-column: 2/3;
 }
-#edit_user_page{
-	display: grid;
-	justify-items: center;
+#edit_user_page {
+  display: grid;
+  justify-items: center;
 }
 
- @media only screen and (max-width: 750px) {
-	 .container {
-		 display: flex;
-		 flex-direction: column;
-		 margin-top: 75px;
-		 justify-items: center;
-	 }
-	 .title_and_tag {
-		 display: flex;
-		 flex-direction: column;
-		 padding: 50px;
-		 width: 340px;
-		 margin-left: auto;
-		 margin-right: auto;
-	 }
- }
- 
+@media only screen and (max-width: 750px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    margin-top: 75px;
+    justify-items: center;
+  }
+  .title_and_tag {
+    display: flex;
+    flex-direction: column;
+    padding: 50px;
+    width: 340px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
